gamedatasounddir = $(datadir)/@PACKAGE@/sound
gamedatasound_DATA = adjust.wav \
		    bighead-robot.wav \
		    blades.wav \
		    bonus.wav \
		    bubbles-bug.wav \
		    conveyor-belt.wav \
		    destruction.wav \
		    drop.wav \
		    elephant.wav \
		    o-ou.wav \
		    fall.wav \
		    gamusino.wav \
		    head-falling.wav \
		    head-jumping.wav \
		    head-walking.wav \
		    heels-falling.wav \
		    heels-jumping.wav \
		    heels-walking.wav \
		    hh-dying.wav \
		    imperial-guard.wav \
		    monkey.wav \
		    push.wav \
		    robot-collision-2.wav \
		    robot-collision.wav \
		    robot.wav \
		    shot.wav \
		    silence-puppy.wav \
		    sink.wav \
		    siren.wav \
		    spring.wav \
		    switch.wav \
		    take.wav \
		    teleport-in.wav \
		    teleport-out.wav \
		    teleport.wav \
		    tools.wav \
		    trampoline.wav \
		    trumpet.wav
