gamedatatextdir = $(datadir)/@PACKAGE@/text
gamedatatext_DATA = language.xml \
		    language.xsd \
		    af_ZA.xml \
		    ast_ES.xml \
		    ca_ES.xml \
		    da_DK.xml \
		    de_DE.xml \
		    en_US.xml \
		    es_ES.xml \
		    es_LA.xml \
		    eu_ES.xml \
		    fi_FI.xml \
		    fr_FR.xml \
		    gl_ES.xml \
		    hr_HR.xml \
		    hu_HU.xml \
		    it_IT.xml \
		    la_VA.xml \
		    pl_PL.xml \
		    pt_BR.xml \
		    pt_PT.xml \
		    ru_RU.xml \
		    sk_SK.xml \
		    sr_SR.xml \
		    val_ES.xml
