gamedatagfx2003byblosdir = $(datadir)/@PACKAGE@/gfx.2003/byblos.png
gamedatagfx2003byblos_DATA = byblos-column-capital-east.png \
			byblos-column-capital-north.png \
			byblos-column-capital-south.png \
			byblos-column-capital-west.png \
			byblos-column-shaft-east.png \
			byblos-column-shaft-north.png \
			byblos-door-east.png \
			byblos-door-north.png \
			byblos-door-south.png \
			byblos-door-west.png \
			byblos-floor.png \
			byblos-floor-east.png \
			byblos-floor-north.png \
			byblos-floor-south.png \
			byblos-floor-sw.png \
			byblos-floor-underground-east.png \
			byblos-floor-underground-north.png \
			byblos-floor-west.png \
			byblos-mortal-floor.png \
			byblos-nofloor-south.png \
			byblos-nofloor-sw.png \
			byblos-nofloor-west.png \
			byblos-wall-x-1.png \
			byblos-wall-x-2.png \
			byblos-wall-y-1.png \
			byblos-wall-y-2.png
