gamedatagfx2009jaildir = $(datadir)/@PACKAGE@/gfx.2009/jail.png
gamedatagfx2009jail_DATA = jail-column-capital-east.png \
		      jail-column-capital-north.png \
		      jail-column-capital-south.png \
		      jail-column-capital-west.png \
		      jail-column-shaft-east.png \
		      jail-column-shaft-north.png \
		      jail-door-east.png \
		      jail-door-north.png \
		      jail-door-south.png \
		      jail-door-west.png \
		      jail-floor.png \
		      jail-floor-east.png \
		      jail-floor-north.png \
		      jail-floor-south.png \
		      jail-floor-sw.png \
		      jail-floor-underground-east.png \
		      jail-floor-underground-north.png \
		      jail-floor-west.png \
		      jail-mortal-floor.png \
		      jail-nofloor-south.png \
		      jail-nofloor-sw.png \
		      jail-nofloor-west.png \
		      jail-wall-x.png \
		      jail-wall-y.png
