gamedatagfx2009penitentiarydir = $(datadir)/@PACKAGE@/gfx.2009/penitentiary.png
gamedatagfx2009penitentiary_DATA = penitentiary-column-capital-east.png \
			      penitentiary-column-capital-north.png \
			      penitentiary-column-capital-south.png \
			      penitentiary-column-capital-west.png \
			      penitentiary-column-shaft-east.png \
			      penitentiary-column-shaft-north.png \
			      penitentiary-door-east.png \
			      penitentiary-door-north.png \
			      penitentiary-door-south.png \
			      penitentiary-door-west.png \
			      penitentiary-floor.png \
			      penitentiary-floor-east.png \
			      penitentiary-floor-north.png \
			      penitentiary-floor-south.png \
			      penitentiary-floor-sw.png \
			      penitentiary-floor-underground-east.png \
			      penitentiary-floor-underground-north.png \
			      penitentiary-floor-west.png \
			      penitentiary-mortal-floor.png \
			      penitentiary-nofloor-south.png \
			      penitentiary-nofloor-sw.png \
			      penitentiary-nofloor-west.png \
			      penitentiary-wall-x-1.png \
			      penitentiary-wall-x-2.png \
			      penitentiary-wall-y-1.png \
			      penitentiary-wall-y-2.png
