gamedatagfx2009safaridir = $(datadir)/@PACKAGE@/gfx.2009/safari.png
gamedatagfx2009safari_DATA = safari-column-capital-east.png \
			safari-column-capital-north.png \
			safari-column-capital-south.png \
			safari-column-capital-west.png \
			safari-column-shaft-east.png \
			safari-column-shaft-north.png \
			safari-door-east.png \
			safari-door-north.png \
			safari-door-south.png \
			safari-door-west.png \
			safari-floor.png \
			safari-floor-east.png \
			safari-floor-north.png \
			safari-floor-south.png \
			safari-floor-sw.png \
			safari-floor-underground-east.png \
			safari-floor-underground-north.png \
			safari-floor-west.png \
			safari-mortal-floor.png \
			safari-nofloor-south.png \
			safari-nofloor-sw.png \
			safari-nofloor-west.png \
			safari-wall-x-1.png \
			safari-wall-x-2.png \
			safari-wall-x-3.png \
			safari-wall-y-1.png \
			safari-wall-y-2.png \
			safari-wall-y-3.png
