gamedatagfxriderxegyptusdir = $(datadir)/@PACKAGE@/gfx.riderx/egyptus.png
gamedatagfxriderxegyptus_DATA = egyptus-column-capital-east.png \
			  egyptus-column-capital-north.png \
			  egyptus-column-capital-south.png \
			  egyptus-column-capital-west.png \
			  egyptus-column-shaft-east.png \
			  egyptus-column-shaft-north.png \
			  egyptus-door-east.png \
			  egyptus-door-north.png \
			  egyptus-door-south.png \
			  egyptus-door-west.png \
			  egyptus-floor.png \
			  egyptus-floor-east.png \
			  egyptus-floor-north.png \
			  egyptus-floor-south.png \
			  egyptus-floor-sw.png \
			  egyptus-floor-underground-east.png \
			  egyptus-floor-underground-north.png \
			  egyptus-floor-west.png \
			  egyptus-mortal-floor.png \
			  egyptus-nofloor-south.png \
			  egyptus-nofloor-sw.png \
			  egyptus-nofloor-west.png \
			  egyptus-wall-x-1.png \
			  egyptus-wall-x-2.png \
			  egyptus-wall-y-1.png \
			  egyptus-wall-y-2.png
