gamedatagfxblacktoothdir = $(datadir)/@PACKAGE@/gfx/blacktooth.png
gamedatagfxblacktooth_DATA = blacktooth-column-capital-east.png \
			    blacktooth-column-capital-north.png \
			    blacktooth-column-capital-south.png \
			    blacktooth-column-capital-west.png \
			    blacktooth-column-shaft-east.png \
			    blacktooth-column-shaft-north.png \
			    blacktooth-door-east.png \
			    blacktooth-door-north.png \
			    blacktooth-door-south.png \
			    blacktooth-door-west.png \
			    blacktooth-floor.png \
			    blacktooth-floor-east.png \
			    blacktooth-floor-north.png \
			    blacktooth-floor-south.png \
			    blacktooth-floor-sw.png \
			    blacktooth-floor-underground-east.png \
			    blacktooth-floor-underground-north.png \
			    blacktooth-floor-west.png \
			    blacktooth-mortal-floor.png \
			    blacktooth-nofloor-south.png \
			    blacktooth-nofloor-sw.png \
			    blacktooth-nofloor-west.png \
			    blacktooth-wall-x-1.png \
			    blacktooth-wall-x-2.png \
			    blacktooth-wall-x-3.png \
			    blacktooth-wall-y-1.png \
			    blacktooth-wall-y-2.png \
			    blacktooth-wall-y-3.png
