gamedatagfxblacktoothdir = $(datadir)/@PACKAGE@/gfx/blacktooth
gamedatagfxblacktooth_DATA = blacktooth-column-capital-east.bmp \
			    blacktooth-column-capital-north.bmp \
			    blacktooth-column-capital-south.bmp \
			    blacktooth-column-capital-west.bmp \
			    blacktooth-column-shaft-east.bmp \
			    blacktooth-column-shaft-north.bmp \
			    blacktooth-door-east.bmp \
			    blacktooth-door-north.bmp \
			    blacktooth-door-south.bmp \
			    blacktooth-door-west.bmp \
			    blacktooth-floor.bmp \
			    blacktooth-floor-east.bmp \
			    blacktooth-floor-north.bmp \
			    blacktooth-floor-south.bmp \
			    blacktooth-floor-sw.bmp \
			    blacktooth-floor-underground-east.bmp \
			    blacktooth-floor-underground-north.bmp \
			    blacktooth-floor-west.bmp \
			    blacktooth-mortal-floor.bmp \
			    blacktooth-nofloor-south.bmp \
			    blacktooth-nofloor-sw.bmp \
			    blacktooth-nofloor-west.bmp \
			    blacktooth-wall-x-1.bmp \
			    blacktooth-wall-x-2.bmp \
			    blacktooth-wall-x-3.bmp \
			    blacktooth-wall-y-1.bmp \
			    blacktooth-wall-y-2.bmp \
			    blacktooth-wall-y-3.bmp
