gamedatagfxbyblosdir = $(datadir)/@PACKAGE@/gfx/byblos
gamedatagfxbyblos_DATA = byblos-column-capital-east.bmp \
			byblos-column-capital-north.bmp \
			byblos-column-capital-south.bmp \
			byblos-column-capital-west.bmp \
			byblos-column-shaft-east.bmp \
			byblos-column-shaft-north.bmp \
			byblos-door-east.bmp \
			byblos-door-north.bmp \
			byblos-door-south.bmp \
			byblos-door-west.bmp \
			byblos-floor.bmp \
			byblos-floor-east.bmp \
			byblos-floor-north.bmp \
			byblos-floor-south.bmp \
			byblos-floor-sw.bmp \
			byblos-floor-underground-east.bmp \
			byblos-floor-underground-north.bmp \
			byblos-floor-west.bmp \
			byblos-mortal-floor.bmp \
			byblos-nofloor-south.bmp \
			byblos-nofloor-sw.bmp \
			byblos-nofloor-west.bmp \
			byblos-wall-x-1.bmp \
			byblos-wall-x-2.bmp \
			byblos-wall-y-1.bmp \
			byblos-wall-y-2.bmp
