gamedatagfxegyptusdir = $(datadir)/@PACKAGE@/gfx/egyptus
gamedatagfxegyptus_DATA = egyptus-column-capital-east.bmp \
			  egyptus-column-capital-north.bmp \
			  egyptus-column-capital-south.bmp \
			  egyptus-column-capital-west.bmp \
			  egyptus-column-shaft-east.bmp \
			  egyptus-column-shaft-north.bmp \
			  egyptus-door-east.bmp \
			  egyptus-door-north.bmp \
			  egyptus-door-south.bmp \
			  egyptus-door-west.bmp \
			  egyptus-floor.bmp \
			  egyptus-floor-east.bmp \
			  egyptus-floor-north.bmp \
			  egyptus-floor-south.bmp \
			  egyptus-floor-sw.bmp \
			  egyptus-floor-underground-east.bmp \
			  egyptus-floor-underground-north.bmp \
			  egyptus-floor-west.bmp \
			  egyptus-mortal-floor.bmp \
			  egyptus-nofloor-south.bmp \
			  egyptus-nofloor-sw.bmp \
			  egyptus-nofloor-west.bmp \
			  egyptus-wall-x-1.bmp \
			  egyptus-wall-x-2.bmp \
			  egyptus-wall-y-1.bmp \
			  egyptus-wall-y-2.bmp
