gamedatagfxguidir = $(datadir)/@PACKAGE@/gfx/gui.png
gamedatagfxgui_DATA = background.png \
		      blacktooth.png \
		      blacktooth-frame.png \
		      byblos.png \
		      byblos-frame.png \
		      crown.png \
		      donuts.png \
		      egyptus.png \
		      egyptus-frame.png \
		      grey-crown.png \
		      grey-donuts.png \
		      grey-handbag.png \
		      grey-head.png \
		      grey-heels.png \
		      grey-horn.png \
		      handbag.png \
		      head.png \
		      heels.png \
		      high-jumps.png \
		      high-speed.png \
		      horn.png \
		      jail-frame.png \
		      market-frame.png \
		      moonbase-frame.png \
		      option.png \
		      penitentiary.png \
		      penitentiary-frame.png \
		      safari.png \
		      safari-frame.png \
		      selected-option.png \
		      selected-option-mini.png \
		      shield.png
