gamedatagfxguidir = $(datadir)/@PACKAGE@/gfx/gui
gamedatagfxgui_DATA = background.bmp \
		      blacktooth.bmp \
		      blacktooth-frame.bmp \
		      byblos.bmp \
		      byblos-frame.bmp \
		      crown.bmp \
		      donuts.bmp \
		      egyptus.bmp \
		      egyptus-frame.bmp \
		      font.bmp \
		      grey-crown.bmp \
		      grey-donuts.bmp \
		      grey-handbag.bmp \
		      grey-head.bmp \
		      grey-heels.bmp \
		      grey-horn.bmp \
		      handbag.bmp \
		      head.bmp \
		      heels.bmp \
		      high-jumps.bmp \
		      high-speed.bmp \
		      horn.bmp \
		      jail-frame.bmp \
		      market-frame.bmp \
		      moonbase-frame.bmp \
		      option.bmp \
		      penitentiary.bmp \
		      penitentiary-frame.bmp \
		      safari.bmp \
		      safari-frame.bmp \
		      selected-option.bmp \
		      selected-option-mini.bmp \
		      shield.bmp
