gamedatagfxitemdir = $(datadir)/@PACKAGE@/gfx/item.png
gamedatagfxitem_DATA = ball.png \
		      ball-shadows.png \
		      bars.png \
		      bars-ew.png \
		      bars-ew-shadows.png \
		      bars-ns.png \
		      bars-ns-shadows.png \
		      big-head-robot.png \
		      big-head-robot-shadows.png \
		      bomb.png \
		      bomb-shadows.png \
		      book.png \
		      book-shadows.png \
		      brick1.png \
		      brick1-shadows.png \
		      brick2.png \
		      brick2-shadows.png \
		      bubble-robot.png \
		      bubble-robot-shadows.png \
		      bubbles.png \
		      bubbles-shadows.png \
		      cap.png \
		      cap-shadows.png \
		      conveyor-belt.png \
		      conveyor-belt-shadows.png \
		      crown.png \
		      crown-shadows.png \
		      cylinder.png \
		      diver.png \
		      diver-shadows.png \
		      donuts.png \
		      donuts-shadows.png \
		      double-bubbles.png \
		      drum.png \
		      drum-shadows.png \
		      elephant.png \
		      elephant-head.png \
		      elephant-shadows.png \
		      elevator.png \
		      elevator-shadows.png \
		      emperor.png \
		      emperor-shadows.png \
		      fish.png \
		      fish-shadows.png \
		      freedonian-head.png \
		      freedonian-head-shadows.png \
		      freedonian-heels.png \
		      freedonian-heels-shadows.png \
		      handbag.png \
		      head.png \
		      headoverheels.png \
		      headoverheels-shadows.png \
		      head-shadows.png \
		      heels.png \
		      heels-shadows.png \
		      helicopter-bug.png \
		      helicopter-bug-shadows.png \
		      hidden-shaft.png \
		      hidden-top-wall.png \
		      hidden-wall.png \
		      horn.png \
		      imperial-guard.png \
		      imperial-guard-head.png \
		      imperial-guard-shadows.png \
		      monkey.png \
		      monkey-head.png \
		      monkey-shadows.png \
		      portable-brick2.png \
		      portable-brick2-shadows.png \
		      portable-brick.png \
		      portable-brick-shadows.png \
		      puppy.png \
		      puppy-shadows.png \
		      rabbit-bronze.png \
		      rabbit-gold.png \
		      rabbit-shadows.png \
		      rabbit-silver.png \
		      remote-control.png \
		      remote-control-shadows.png \
		      robot.png \
		      robot-shadows.png \
		      sandwich.png \
		      sandwich-shadows.png \
		      shadow-template.png \
		      siren.png \
		      siren-shadows.png \
		      spikes.png \
		      spikes-shadows.png \
		      stool.png \
		      stool-shadows.png \
		      switch.png \
		      switch-shadows.png \
		      teleport.png \
		      teleport-shadows.png \
		      throne-guard.png \
		      throne-guard-shadows.png \
		      toaster.png \
		      toaster-shadows.png \
		      trampoline.png \
		      trampoline-shadows.png \
		      turtle.png \
		      turtle-shadows.png \
		      vulcano.png \
		      vulcano-shadows.png
