gamedatagfxitemdir = $(datadir)/@PACKAGE@/gfx/item
gamedatagfxitem_DATA = ball.bmp \
		      ball-shadows.bmp \
		      bars.bmp \
		      bars-ew.bmp \
		      bars-ew-shadows.bmp \
		      bars-ns.bmp \
		      bars-ns-shadows.bmp \
		      big-head-robot.bmp \
		      big-head-robot-shadows.bmp \
		      bomb.bmp \
		      bomb-shadows.bmp \
		      book.bmp \
		      book-shadows.bmp \
		      brick1.bmp \
		      brick1-shadows.bmp \
		      brick2.bmp \
		      brick2-shadows.bmp \
		      bubble-robot.bmp \
		      bubble-robot-shadows.bmp \
		      bubbles.bmp \
		      bubbles-shadows.bmp \
		      cap.bmp \
		      cap-shadows.bmp \
		      conveyor-belt.bmp \
		      conveyor-belt-shadows.bmp \
		      crown.bmp \
		      crown-shadows.bmp \
		      cylinder.bmp \
		      diver.bmp \
		      diver-shadows.bmp \
		      donuts.bmp \
		      donuts-shadows.bmp \
		      double-bubbles.bmp \
		      drum.bmp \
		      drum-shadows.bmp \
		      elephant.bmp \
		      elephant-head.bmp \
		      elephant-shadows.bmp \
		      elevator.bmp \
		      elevator-shadows.bmp \
		      emperor.bmp \
		      emperor-shadows.bmp \
		      fish.bmp \
		      fish-shadows.bmp \
		      freedonian-head.bmp \
		      freedonian-head-shadows.bmp \
		      freedonian-heels.bmp \
		      freedonian-heels-shadows.bmp \
		      handbag.bmp \
		      head.bmp \
		      headoverheels.bmp \
		      headoverheels-shadows.bmp \
		      head-shadows.bmp \
		      heels.bmp \
		      heels-shadows.bmp \
		      helicopter-bug.bmp \
		      helicopter-bug-shadows.bmp \
		      hidden-shaft.bmp \
		      hidden-top-wall.bmp \
		      hidden-wall.bmp \
		      horn.bmp \
		      imperial-guard.bmp \
		      imperial-guard-head.bmp \
		      imperial-guard-shadows.bmp \
		      monkey.bmp \
		      monkey-head.bmp \
		      monkey-shadows.bmp \
		      portable-brick2.bmp \
		      portable-brick2-shadows.bmp \
		      portable-brick.bmp \
		      portable-brick-shadows.bmp \
		      puppy.bmp \
		      puppy-shadows.bmp \
		      rabbit-bronze.bmp \
		      rabbit-gold.bmp \
		      rabbit-shadows.bmp \
		      rabbit-silver.bmp \
		      remote-control.bmp \
		      remote-control-shadows.bmp \
		      robot.bmp \
		      robot-shadows.bmp \
		      sandwich.bmp \
		      sandwich-shadows.bmp \
		      shadow-template.bmp \
		      siren.bmp \
		      siren-shadows.bmp \
		      spikes.bmp \
		      spikes-shadows.bmp \
		      stool.bmp \
		      stool-shadows.bmp \
		      switch.bmp \
		      switch-shadows.bmp \
		      teleport.bmp \
		      teleport-shadows.bmp \
		      throne-guard.bmp \
		      throne-guard-shadows.bmp \
		      toaster.bmp \
		      toaster-shadows.bmp \
		      trampoline.bmp \
		      trampoline-shadows.bmp \
		      turtle.bmp \
		      turtle-shadows.bmp \
		      vulcano.bmp \
		      vulcano-shadows.bmp
