gamedatagfxjaildir = $(datadir)/@PACKAGE@/gfx/jail
gamedatagfxjail_DATA = jail-column-capital-east.bmp \
		      jail-column-capital-north.bmp \
		      jail-column-capital-south.bmp \
		      jail-column-capital-west.bmp \
		      jail-column-shaft-east.bmp \
		      jail-column-shaft-north.bmp \
		      jail-door-east.bmp \
		      jail-door-north.bmp \
		      jail-door-south.bmp \
		      jail-door-west.bmp \
		      jail-floor.bmp \
		      jail-floor-east.bmp \
		      jail-floor-north.bmp \
		      jail-floor-south.bmp \
		      jail-floor-sw.bmp \
		      jail-floor-underground-east.bmp \
		      jail-floor-underground-north.bmp \
		      jail-floor-west.bmp \
		      jail-mortal-floor.bmp \
		      jail-nofloor-south.bmp \
		      jail-nofloor-sw.bmp \
		      jail-nofloor-west.bmp \
		      jail-wall-x.bmp \
		      jail-wall-y.bmp
