gamedatagfxmarketdir = $(datadir)/@PACKAGE@/gfx/market.png
gamedatagfxmarket_DATA = market-column-capital-east.png \
			market-column-capital-north.png \
			market-column-capital-south.png \
			market-column-capital-west.png \
			market-column-shaft-east.png \
			market-column-shaft-north.png \
			market-door-east.png \
			market-door-north.png \
			market-door-south.png \
			market-door-west.png \
			market-floor.png \
			market-floor-east.png \
			market-floor-north.png \
			market-floor-south.png \
			market-floor-sw.png \
			market-floor-underground-east.png \
			market-floor-underground-north.png \
			market-floor-west.png \
			market-mortal-floor.png \
			market-wall-x-1.png \
			market-wall-x-2.png \
			market-wall-x-3.png \
			market-wall-y-1.png \
			market-wall-y-2.png \
			market-wall-y-3.png
