gamedatagfxmarketdir = $(datadir)/@PACKAGE@/gfx/market
gamedatagfxmarket_DATA = market-column-capital-east.bmp \
			market-column-capital-north.bmp \
			market-column-capital-south.bmp \
			market-column-capital-west.bmp \
			market-column-shaft-east.bmp \
			market-column-shaft-north.bmp \
			market-door-east.bmp \
			market-door-north.bmp \
			market-door-south.bmp \
			market-door-west.bmp \
			market-floor.bmp \
			market-floor-east.bmp \
			market-floor-north.bmp \
			market-floor-south.bmp \
			market-floor-sw.bmp \
			market-floor-underground-east.bmp \
			market-floor-underground-north.bmp \
			market-floor-west.bmp \
			market-mortal-floor.bmp \
			market-wall-x-1.bmp \
			market-wall-x-2.bmp \
			market-wall-x-3.bmp \
			market-wall-y-1.bmp \
			market-wall-y-2.bmp \
			market-wall-y-3.bmp
