gamedatagfxmoonbasedir = $(datadir)/@PACKAGE@/gfx/moonbase.png
gamedatagfxmoonbase_DATA = moonbase-column-capital-east.png \
			  moonbase-column-capital-north.png \
			  moonbase-column-capital-south.png \
			  moonbase-column-capital-west.png \
			  moonbase-column-shaft-east.png \
			  moonbase-column-shaft-north.png \
			  moonbase-door-east.png \
			  moonbase-door-north.png \
			  moonbase-door-south.png \
			  moonbase-door-west.png \
			  moonbase-floor.png \
			  moonbase-floor-east.png \
			  moonbase-floor-north.png \
			  moonbase-floor-south.png \
			  moonbase-floor-sw.png \
			  moonbase-floor-underground-east.png \
			  moonbase-floor-underground-north.png \
			  moonbase-floor-west.png \
			  moonbase-mortal-floor.png \
			  moonbase-wall-x-1.png \
			  moonbase-wall-x-2.png \
			  moonbase-wall-x-3.png \
			  moonbase-wall-x-4.png \
			  moonbase-wall-y-1.png \
			  moonbase-wall-y-2.png \
			  moonbase-wall-y-3.png \
			  moonbase-wall-y-4.png
