gamedatagfxmoonbasedir = $(datadir)/@PACKAGE@/gfx/moonbase
gamedatagfxmoonbase_DATA = moonbase-column-capital-east.bmp \
			  moonbase-column-capital-north.bmp \
			  moonbase-column-capital-south.bmp \
			  moonbase-column-capital-west.bmp \
			  moonbase-column-shaft-east.bmp \
			  moonbase-column-shaft-north.bmp \
			  moonbase-door-east.bmp \
			  moonbase-door-north.bmp \
			  moonbase-door-south.bmp \
			  moonbase-door-west.bmp \
			  moonbase-floor.bmp \
			  moonbase-floor-east.bmp \
			  moonbase-floor-north.bmp \
			  moonbase-floor-south.bmp \
			  moonbase-floor-sw.bmp \
			  moonbase-floor-underground-east.bmp \
			  moonbase-floor-underground-north.bmp \
			  moonbase-floor-west.bmp \
			  moonbase-mortal-floor.bmp \
			  moonbase-wall-x-1.bmp \
			  moonbase-wall-x-2.bmp \
			  moonbase-wall-x-3.bmp \
			  moonbase-wall-x-4.bmp \
			  moonbase-wall-y-1.bmp \
			  moonbase-wall-y-2.bmp \
			  moonbase-wall-y-3.bmp \
			  moonbase-wall-y-4.bmp