gamedatagfxpenitentiarydir = $(datadir)/@PACKAGE@/gfx/penitentiary
gamedatagfxpenitentiary_DATA = penitentiary-column-capital-east.bmp \
			      penitentiary-column-capital-north.bmp \
			      penitentiary-column-capital-south.bmp \
			      penitentiary-column-capital-west.bmp \
			      penitentiary-column-shaft-east.bmp \
			      penitentiary-column-shaft-north.bmp \
			      penitentiary-door-east.bmp \
			      penitentiary-door-north.bmp \
			      penitentiary-door-south.bmp \
			      penitentiary-door-west.bmp \
			      penitentiary-floor.bmp \
			      penitentiary-floor-east.bmp \
			      penitentiary-floor-north.bmp \
			      penitentiary-floor-south.bmp \
			      penitentiary-floor-sw.bmp \
			      penitentiary-floor-underground-east.bmp \
			      penitentiary-floor-underground-north.bmp \
			      penitentiary-floor-west.bmp \
			      penitentiary-mortal-floor.bmp \
			      penitentiary-nofloor-south.bmp \
			      penitentiary-nofloor-sw.bmp \
			      penitentiary-nofloor-west.bmp \
			      penitentiary-wall-x-1.bmp \
			      penitentiary-wall-x-2.bmp \
			      penitentiary-wall-y-1.bmp \
			      penitentiary-wall-y-2.bmp
