gamedatagfxsafaridir = $(datadir)/@PACKAGE@/gfx/safari
gamedatagfxsafari_DATA = safari-column-capital-east.bmp \
			safari-column-capital-north.bmp \
			safari-column-capital-south.bmp \
			safari-column-capital-west.bmp \
			safari-column-shaft-east.bmp \
			safari-column-shaft-north.bmp \
			safari-door-east.bmp \
			safari-door-north.bmp \
			safari-door-south.bmp \
			safari-door-west.bmp \
			safari-floor.bmp \
			safari-floor-east.bmp \
			safari-floor-north.bmp \
			safari-floor-south.bmp \
			safari-floor-sw.bmp \
			safari-floor-underground-east.bmp \
			safari-floor-underground-north.bmp \
			safari-floor-west.bmp \
			safari-mortal-floor.bmp \
			safari-nofloor-south.bmp \
			safari-nofloor-sw.bmp \
			safari-nofloor-west.bmp \
			safari-wall-x-1.bmp \
			safari-wall-x-2.bmp \
			safari-wall-x-3.bmp \
			safari-wall-y-1.bmp \
			safari-wall-y-2.bmp \
			safari-wall-y-3.bmp
