gamedatagfxthemoondir = $(datadir)/@PACKAGE@/gfx/themoon.png
gamedatagfxthemoon_DATA = themoon-column-capital-east.png \
			  themoon-column-capital-north.png \
			  themoon-column-capital-south.png \
			  themoon-column-capital-west.png \
			  themoon-column-shaft-east.png \
			  themoon-column-shaft-north.png \
			  themoon-door-east.png \
			  themoon-door-north.png \
			  themoon-door-south.png \
			  themoon-door-west.png \
			  themoon-floor.png \
			  themoon-floor-east.png \
			  themoon-floor-north.png \
			  themoon-floor-south.png \
			  themoon-floor-sw.png \
			  themoon-floor-underground-east.png \
			  themoon-floor-underground-north.png \
			  themoon-floor-west.png \
			  themoon-mortal-floor.png \
			  themoon-wall-x-1.png \
			  themoon-wall-x-2.png \
			  themoon-wall-x-3.png \
			  themoon-wall-x-4.png \
			  themoon-wall-y-1.png \
			  themoon-wall-y-2.png \
			  themoon-wall-y-3.png \
			  themoon-wall-y-4.png
