gamedatamapblacktoothdir = $(datadir)/@PACKAGE@/map/blacktooth
gamedatamapblacktooth_DATA = blacktooth01.xml \
			    blacktooth02.xml \
			    blacktooth03.xml \
			    blacktooth04.xml \
			    blacktooth05.xml \
			    blacktooth06.xml \
			    blacktooth07.xml \
			    blacktooth08.xml \
			    blacktooth09.xml \
			    blacktooth10.xml \
			    blacktooth11.xml \
			    blacktooth12.xml \
			    blacktooth13.xml \
			    blacktooth14.xml \
			    blacktooth15.xml \
			    blacktooth16.xml \
			    blacktooth17.xml \
			    blacktooth18.xml \
			    blacktooth19.xml \
			    blacktooth20.xml \
			    blacktooth21.xml \
			    blacktooth22.xml \
			    blacktooth23.xml \
			    blacktooth24.xml \
			    blacktooth25.xml \
			    blacktooth26.xml \
			    blacktooth27.xml \
			    blacktooth28.xml \
			    blacktooth29.xml \
			    blacktooth30.xml \
			    blacktooth31.xml \
			    blacktooth32.xml \
			    blacktooth33.xml \
			    blacktooth34.xml \
			    blacktooth35.xml \
			    blacktooth36.xml \
			    blacktooth37.xml \
			    blacktooth38.xml \
			    blacktooth39.xml \
			    blacktooth40.xml \
			    blacktooth41.xml \
			    blacktooth42.xml \
			    blacktooth43.xml \
			    blacktooth44.xml \
			    blacktooth45.xml \
			    blacktooth46.xml \
			    blacktooth47.xml \
			    blacktooth48.xml \
			    blacktooth49.xml \
			    blacktooth50.xml \
			    blacktooth51.xml \
			    blacktooth52.xml \
			    blacktooth53.xml \
			    blacktooth54.xml \
			    blacktooth55.xml \
			    blacktooth56.xml \
			    blacktooth57.xml \
			    blacktooth58.xml \
			    blacktooth59.xml \
			    blacktooth60.xml \
			    blacktooth61.xml \
			    blacktooth62.xml \
			    blacktooth63.xml \
			    blacktooth64.xml \
			    blacktooth65.xml \
			    blacktooth66.xml \
			    blacktooth67.xml \
			    blacktooth68.xml \
			    blacktooth69.xml \
			    blacktooth70.xml \
			    blacktooth71.xml \
			    blacktooth72.xml \
			    blacktooth73.xml \
			    blacktooth74.xml \
			    blacktooth75.xml \
			    blacktooth76.xml \
			    blacktooth77.xml \
			    blacktooth78.xml \
			    blacktooth79.xml \
			    blacktooth80.xml \
			    blacktooth81.xml \
			    blacktooth82.xml \
			    blacktooth83.xml \
			    blacktooth84.xml \
			    blacktooth85.xml \
			    blacktooth86.xml \
			    blacktooth87.xml \
			    blacktooth88.xml \
			    room.xsd
