gamedatamapbyblosdir = $(datadir)/@PACKAGE@/map/byblos
gamedatamapbyblos_DATA = byblos01.xml \
			byblos02.xml \
			byblos03.xml \
			byblos04.xml \
			byblos05.xml \
			byblos06.xml \
			byblos07.xml \
			byblos08.xml \
			byblos09.xml \
			byblos10.xml \
			byblos11.xml \
			byblos12.xml \
			byblos13.xml \
			byblos14.xml \
			byblos15.xml \
			byblos16.xml \
			byblos17.xml \
			byblos18.xml \
			byblos19.xml \
			byblos20.xml \
			byblos21.xml \
			byblos22.xml \
			byblos23.xml \
			byblos24.xml \
			byblos25.xml \
			byblos26.xml \
			byblos27.xml \
			byblos28.xml \
			byblos29.xml \
			byblos30.xml \
			byblos31.xml \
			byblos32.xml \
			byblos33.xml \
			byblos34.xml \
			byblos35.xml \
			byblos36.xml \
			byblos37.xml \
			byblos38.xml \
			byblos39.xml \
			byblos40.xml \
			byblos41.xml \
			room.xsd
